# cmake-exploration

./: .gitignore  CMakeLists.txt  README.md  VersionUtils.cmake
include/: version.h
src/: main.cpp
